media images/uploads
- working through media images/uploads for data-driven podcast/media listing
- manually copied/renamed images to match what the PodcastModels.cs logic is writing to the DB

--TODO: refactor to create basic image names with admin nav? is that the solution?

--- a/rcliberty.Web/Views/Home/Index.cshtml
+++ b/rcliberty.Web/Views/Home/Index.cshtml
@@ -23,30 +23,28 @@
 
     <!-- slides -->
     <div class="carousel-inner">
+        <div class="item">
+            <img src="~/Content/img/the-experience-banner.jpg" alt="The Experience" style="width:100%;">
+        </div>
+
         <div class="item active">
-            <img src="~/Content/img/christmas-eve-banner.jpg" alt="Current Series" style="width:100%;">
-            @*<img src="~/Content/img/duck-dynasty-promo-banner.png" alt="Duck Dynasty October 8th" style="width: 100%;" />*@
+            <img src="~/Content/img/spirit-power-unleashed-banner.jpg" alt="Current Series" style="width:100%;">
         </div>
 
         @*<div class="item">
-                <img src="~/Content/img/the-experience-banner.jpg" alt="The Experience" style="width:100%;">
-            </div>*@
-
-        @*<div class="item">
-                <img src="~/Content/img/theCapitol-promo-resize2.png" alt="The Capitol" style="width:100%;" />
-            </div>*@
+            <img src="~/Content/img/theCapitol-promo-resize2.png" alt="The Capitol" style="width:100%;" />
+        </div>*@
     </div>
 
     <!-- left & right controls -->
-    @* commented out for Duck Dynasty event *@
-    @*<a class="left carousel-control" href="#rc-main-slider" data-slide="prev">
+    <a class="left carousel-control" href="#rc-main-slider" data-slide="prev">
             <span class="glyphicon glyphicon-chevron-left"></span>
             <span class="sr-only">Previous</span>
         </a>
         <a class="right carousel-control" href="#rc-main-slider" data-slide="next">
             <span class="glyphicon glyphicon-chevron-right"></span>
             <span class="sr-only">Next</span>
-        </a>*@
+        </a>
 </div>
 
 <div class="spacer"></div>
