--- a/rcliberty.Web/Views/Shared/_Layout.cshtml
+++ b/rcliberty.Web/Views/Shared/_Layout.cshtml
@@ -3,6 +3,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+    @* Google Analytics Global site tag (gtag.js) *@
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131562259-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-131562259-1');
+    </script>
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Churches in Liberty Missouri,  Liberty Missouri Churches, Assembly of God Church Liberty Missouri, Northland Kansas City Churches" />"
