data-driven media page
- added ViewModel to contain the collections of each type to display in the View
- added methods to access series/episode data
- organized a tile layout of series, then published the unique episode information in a modal for each series
- light styling/customization

--- a/rcliberty.Web/Content/custom.css
+++ b/rcliberty.Web/Content/custom.css
@@ -907,6 +907,27 @@ footer
     }
 }
 
+/* EVENTS */
+.rc-media-img-tiles
+{
+    padding: 1em;
+    float: left;
+    width: 33%;
+}
+
+.rc-media-episodes
+{
+    text-align: center;
+    margin: 1em;
+    padding-bottom: 1em;
+    border: 2px solid #16a4a8;
+}
+
+    .rc-media-episodes h3
+    {
+        font-weight: bolder;
+    }
+
 /* ADMIN LOGIN */
 #rc-login
 {
