--- a/rcliberty.Web/Views/RolesAdmin/Index.cshtml
+++ b/rcliberty.Web/Views/RolesAdmin/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Microsoft.AspNet.Identity.EntityFramework.IdentityRole>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Manage Roles";
 }
 
 <h2>Index</h2>
