--- a/rcliberty.Web/Content/custom.css
+++ b/rcliberty.Web/Content/custom.css
@@ -50,16 +50,64 @@
         z-index: -1;
     }
 
-/*.container .body-content
+/* image overlay (used for current series) */
+.image
+{
+    opacity: 1;
+    display: block;
+    width: 100%;
+    height: auto;
+    transition: .5s ease;
+    backface-visibility: hidden;
+}
+
+.overlay
+{
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.item:hover .image
+{
+    opacity: 0.3;
+}
+
+.item:hover .overlay
+{
+    opacity: 1;
+}
+
+.overlay-text
+{
+    color: #16a4a8;
+    font-weight: bold;
+    text-shadow: 2px 2px 2px #000;
+    font-size: 3em;
+}
+
+    .overlay-text
+    /*.container .body-content
 {
     background-color: #fff;
 }*/
-/* DUDERCODE TAG */
-#dudercode
+    /* DUDERCODE TAG */
+    #dudercode
+    {
+        text-align: center;
+        font-weight: 600;
+        letter-spacing: 10px;
+    }
+
+#dudercode a
 {
-    text-align: center;
-    font-weight: 600;
-    letter-spacing: 10px;
+    color: #fff;
+    text-decoration: none;
 }
 
 /* TAGS (images) */
