--- a/rcliberty.Web/Views/Home/Index.cshtml
+++ b/rcliberty.Web/Views/Home/Index.cshtml
@@ -28,23 +28,29 @@
         </div>
 
         <div class="item active">
-            <img src="~/Content/img/red-cross-the-real-story-of-jesus.jpg" alt="Current Series" style="width:100%;">
+            @*<img src="~/Content/img/who-am-i-banner.jpg" alt="Current Series" style="width:100%;">*@
+            <img src="~/Content/img/who-am-i-banner.jpg" alt="Current Series" class="image">
+            <div class="overlay">
+                <div class="overlay-text">
+                    Current Series
+                </div>
+            </div>
         </div>
 
         @*<div class="item">
-            <img src="~/Content/img/theCapitol-promo-resize2.png" alt="The Capitol" style="width:100%;" />
-        </div>*@
+                <img src="~/Content/img/theCapitol-promo-resize2.png" alt="The Capitol" style="width:100%;" />
+            </div>*@
     </div>
 
     <!-- left & right controls -->
     <a class="left carousel-control" href="#rc-main-slider" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#rc-main-slider" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-            <span class="sr-only">Next</span>
-        </a>
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#rc-main-slider" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Next</span>
+    </a>
 </div>
 
 <div class="spacer"></div>
