--- a/rcliberty.Web/Content/admin-dashboard.css
+++ b/rcliberty.Web/Content/admin-dashboard.css
@@ -4,7 +4,7 @@
     letter-spacing: .25em;
     margin: 1.5em 0;
     text-transform: uppercase;
-    color: #fff;
+    color: #16a4a8;
 }
 
 #rc-admin-dash
@@ -13,6 +13,18 @@
     padding: 2em;
     min-width: 100%;
 }
+
+.rc-admin-tile
+{
+    width: 30%;
+    display: inline-block;
+    height: 3em;
+    border: 2px solid #2e353d;
+    background-color: #16a4a8;
+    margin-left: 1em;
+}
+
+/* TODO Add media query for tiled layout */
 
 /* ADMIN DASHBOARD NAV */
 .nav-side-menu
@@ -53,19 +65,7 @@
         cursor: pointer;
         visibility: visible !important;
     }
-        /*
-    .collapsed{
-       .arrow:before{
-                 font-family: FontAwesome;
-                 content: "\f053";
-                 display: inline-block;
-                 padding-left:10px;
-                 padding-right: 10px;
-                 vertical-align: middle;
-                 float:right;
-            }
-     }
-*/
+
         .nav-side-menu ul :not(collapsed) .arrow:before,
         .nav-side-menu li :not(collapsed) .arrow:before
         {
@@ -204,4 +204,19 @@
     {
         display: block;
     }
+}
+
+h1.admin-header
+{
+    text-align: center;
+    letter-spacing: .25em;
+    margin: 1.5em 0;
+    text-transform: uppercase;
+    color: #fff;
+}
+
+.admin-create-btn
+{
+    color: #16a4a8;
+    background-color: #fff;
 }
